# HeyaClient

./: .gitignore  README.md  package.json  tsconfig.json
.github/: actionlint.yaml
.github/workflows/: artifacts.yml  ci.yml
bootstrap/: index.html  main.ts  styles.css
docs/: native-audio-bridge.d.ts  native-audio.md  native-playback-bridge.d.ts  native-playback.md  releases.md  runtime-mpv-installation.md  system-media-bridge.d.ts  system-media.md  windows-testing.md
scripts/: check-version-sync.py  create-updater-manifest.py  prepare-windows-libmpv.ps1  stage-macos-libmpv.py  verify-macos-native-bundle.sh  verify-no-bundled-libmpv.py
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: mpv_runtime_shim.c
src-tauri/native/mpv/: providers-v1.json
src-tauri/src/: app_updates.rs  application.rs  application_bridge.js  lib.rs  main.rs  native_bridge.rs  native_window.rs  native_window_bridge.js  navigation.rs  server_profile.rs  window_state.rs
src-tauri/src/native_audio/: bridge.js  bridge.rs  manager.rs  mod.rs  protocol.rs  validation.rs
src-tauri/src/native_audio/core/: callback.rs  command.rs  event.rs  mod.rs  types.rs
src-tauri/src/native_audio/core/crossfade/: album_aware.rs  boundary.rs  curves.rs  mixramp.rs  mod.rs  scheduler.rs  time_based.rs  types.rs
src-tauri/src/native_audio/core/deck/: decode.rs  manager.rs  streaming.rs
src-tauri/src/native_audio/core/dsp/: biquad.rs  crossfeed.rs  equalizer.rs  limiter.rs  mod.rs  postgain.rs  preamp.rs  volume.rs
src-tauri/src/native_audio/core/output/: mixer.rs  mod.rs  resample.rs
src-tauri/src/native_audio/core/visualizer/: fft.rs  mod.rs
src-tauri/src/native_playback/: bridge.js  bridge.rs  engine.rs  manager.rs  mod.rs  mpv.rs  protocol.rs  runtime_install.rs  surface_macos.rs  surface_windows.rs  validation.rs
src-tauri/src/system_media/: bridge.js  bridge.rs  manager.rs  mod.rs  protocol.rs
src-tauri/windows/: installer-hooks.nsh
