[package]
name = "heya-client"
version = "0.2.7"
description = "Cross-platform native client for Heya"
authors = ["HeyaMedia"]
license = "MIT"
repository = "https://github.com/HeyaMedia/HeyaClient"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "heya_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
native-mpv = [
    "dep:libmpv2",
    "dep:libmpv2-sys",
]

[build-dependencies]
cc = "1.2"
pkg-config = "0.3.32"
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
log = "0.4"
anyhow = "1.0"
base64 = "0.22.1"
crossbeam-channel = "0.5"
realfft = "3.5"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
souvlaki = "0.8.3"
tauri = { version = "2.11.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-notification = "2.3.3"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tracing = "0.1"
symphonia = { version = "0.5.5", features = ["all"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
libmpv2 = { version = "6.0.0", default-features = false, optional = true }
libmpv2-sys = { version = "4.0.1", optional = true }
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "windows")'.dependencies]
# WASAPI is CPAL's default Windows backend. Its realtime feature promotes the
# device callback thread so UI/WebView activity is less likely to cause an
# audible deadline miss.
cpal = { version = "0.18.1", features = ["realtime"] }
# CPAL 0.18 accepts both windows-core 0.61 and 0.62 independently from its
# windows crate. Pin the matching generation until CPAL narrows that range;
# mixing the two makes its COM implementations fail to compile on Windows.
windows-core = "=0.61.2"
# The embedded video surface is a deliberately small Win32 child window. MPV
# owns its renderer inside that host through its documented `wid` option;
# Heya never exposes the HWND or arbitrary MPV options to the remote page.
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
sevenz-rust2 = { version = "0.20.2", default-features = false }
sha2 = "0.10.9"

[target.'cfg(not(target_os = "windows"))'.dependencies]
cpal = "0.18.1"

[dev-dependencies]
sevenz-rust2 = { version = "0.20.2", default-features = false }
sha2 = "0.10.9"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
coreaudio-rs = "0.14.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["block2", "NSButton", "NSControl", "NSEvent", "NSGraphics", "NSOpenGL", "NSOpenGLView", "NSResponder", "NSView", "NSWindow", "objc2-open-gl"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSGeometry", "NSObject"] }
